--- a/sesion7/styles/vars.scss
+++ b/sesion7/styles/vars.scss
@@ -6,3 +6,13 @@ $boder-circle: 50%;
 $social-media-icon-width: 32px;
 $social-media-icon-height: 32px;
 $social-media-icon-padding: 5px;
+
+
+
+
+
+$generic-font-family: 'Raleway', 'sans-serif';
+$generic-font-weight: 600;
+
+
+
