Adding info Anay

--- a/p_r/styles/styles.scss
+++ b/p_r/styles/styles.scss
@@ -1,3 +1,15 @@
 .img__logo-kodemia {
     height: 32px;
 }
+
+.card__link {
+    height: 32px;
+}
+
+.card__koder {
+    .img__koder-photo {
+        height: 180px;
+        width: 180px;
+        align-items: center;
+    }
+}
