--- a/p_r/styles/styles.css
+++ b/p_r/styles/styles.css
@@ -10,4 +10,10 @@
   height: 150px;
   width: 180px;
   align-items: center;
+}
+
+@media screen and (max-width: 576px) {
+  .card__koder-title {
+    color: hotpink;
+  }
 }/*# sourceMappingURL=styles.css.map */
