--- a/p_r/styles/styles.scss
+++ b/p_r/styles/styles.scss
@@ -13,3 +13,9 @@
         align-items: center;
     }
 }
+
+@media screen and (max-width: 576px){
+    .card__koder-title {
+        color: hotpink;
+    }  
+}
